# sdl2test

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md  build.bat  build.sh  build_py  buildw.sh  compose.yaml  conanfile.txt  entrypoint.sh
.devcontainer/: devcontainer.json  docker-compose.yml
pre-commit/: run
src/: main.cpp
